@@ -12,6 +12,8 @@ Release 0.19.2 - Unreleased
                not exist (Rong-en Fan via Stack)
    HBASE-1287  Partitioner class not used in TableMapReduceUtil.initTableReduceJob()
                (Lars George and Billy Pearson via Stack)
+   HBASE-1350  New method in HTable.java to return start and end keys for
+               regions in a table (Vimal Mathew via Stack)
 
 Release 0.19.1 - 03/19/2009
   BUG FIXES
